@@ -31,11 +31,11 @@
 <div id="main">
 
     <h1>New Gem Generator</h1>
-    <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/newgem"; return false'>
+    <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/newgem"; return true'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/newgem" class="numbers">0.10.3</a>
+      <a href="http://rubyforge.org/projects/newgem" class="numbers">0.10.4</a>
       <p>Featured in</p>
-      <a target="_blank" href="http://www.amazon.com/Beginning-Ruby-Novice-Professional-Experts/dp/1590597664/ref=pd_bbs_sr_1/002-1314108-4008061?ie=UTF8&s=books&qid=1180763252&sr=8-1" class="book"><img src="images/beginning-ruby.jpg" /></a>
+      <a  href="http://www.amazon.com/gp/redirect.html?ie=UTF8&location=http%3A%2F%2Fwww.amazon.com%2FBeginning-Ruby-Novice-Professional-Experts%2Fdp%2F1590597664%2F&tag=drnic-20&linkCode=ur2&camp=1789&creative=9325" class="book"><img src="images/beginning-ruby.jpg" /></a>
     </div>
     <h1>&#x2192; using &#8216;rubyforge&#8217;</h1>
 
