@@ -31,11 +31,11 @@
 <div id="main">
 
     <h1><%= title %></h1>
-    <div id="version" class="clickable" onclick='document.location = "<%= download %>"; return false'>
+    <div id="version" class="clickable" onclick='document.location = "<%= download %>"; return true'>
       <p>Get Version</p>
       <a href="<%= download %>" class="numbers"><%= version %></a>
       <p>Featured in</p>
-      <a target="_blank" href="http://www.amazon.com/Beginning-Ruby-Novice-Professional-Experts/dp/1590597664/ref=pd_bbs_sr_1/002-1314108-4008061?ie=UTF8&s=books&qid=1180763252&sr=8-1" class="book"><img src="images/beginning-ruby.jpg" /></a>
+      <a  href="http://www.amazon.com/gp/redirect.html?ie=UTF8&location=http%3A%2F%2Fwww.amazon.com%2FBeginning-Ruby-Novice-Professional-Experts%2Fdp%2F1590597664%2F&tag=drnic-20&linkCode=ur2&camp=1789&creative=9325" class="book"><img src="images/beginning-ruby.jpg" /></a>
     </div>
     <%= body %>
     <p class="coda">
