@@ -1,3 +1,3 @@
 // Announcement JS file
-var version = "0.10.3";
+var version = "0.10.4";
 MagicAnnouncement.show('compositekeys', version);
